tests/ui-fulldeps/hash-stable-is-unstable.stderr
error[E0658]: use of unstable library feature 'crablangc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:3:1
   |
LL | extern crate crablangc_data_structures;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27812 <https://github.com/crablang/crablang/issues/27812> for more information
   = help: add `#![feature(crablangc_private)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'crablangc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:5:1
   |
LL | extern crate crablangc_macros;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27812 <https://github.com/crablang/crablang/issues/27812> for more information
   = help: add `#![feature(crablangc_private)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'crablangc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:7:1
   |
LL | extern crate crablangc_query_system;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27812 <https://github.com/crablang/crablang/issues/27812> for more information
   = help: add `#![feature(crablangc_private)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'crablangc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:10:5
   |
LL | use crablangc_macros::HashStable;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #27812 <https://github.com/crablang/crablang/issues/27812> for more information
   = help: add `#![feature(crablangc_private)]` to the crate attributes to enable

error[E0658]: use of unstable library feature 'crablangc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:13:10
   |
LL | #[derive(HashStable)]
   |          ^^^^^^^^^^
   |
   = note: see issue #27812 <https://github.com/crablang/crablang/issues/27812> for more information
   = help: add `#![feature(crablangc_private)]` to the crate attributes to enable
   = note: this error originates in the derive macro `HashStable` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

For more information about this error, try `crablangc --explain E0658`.
